--- a/Files/ManualTranslations.yaml
+++ b/Files/ManualTranslations.yaml
@@ -1,4 +1,19 @@
-﻿- raw: 不管他们
+﻿- raw: 极罡刃  
+  result: Extreme Force Blade  
+  badtrans: true  
+  direct: Extreme Gang Blade  
+  literal: Jigan Ren  
+- raw: 已打通  
+  result: Unblocked  
+  badtrans: true  
+  direct: Already Opened  
+  literal: Yi Datong  
+- raw: 消耗修为：  
+  result: "Consume Cultivation:"
+  badtrans: true  
+  direct: Consume Cultivation
+  literal: Xiaohao Xiuwei
+- raw: 不管他们
   result: Do not care about them
   badtrans: true
   direct: Bu guan ta men
@@ -2389,3 +2404,29 @@
   direct: Land Immortal
   literal: Lu Di Shen Xian
 
+# Martial Arts Tiers
+- raw: 艳新觉  
+  result: Vivid New Awareness  
+  badtrans: true  
+  direct: Gorgeous New Perceive  
+  literal: Yanxin Jue  
+- raw: 参悟武学  
+  result: Comprehend Martial Arts  
+  badtrans: true  
+  direct: Comprehend Martial Study  
+  literal: Canwu Wuxue  
+- raw: 人阶武学  
+  result: Human-Tier Martial Arts  
+  badtrans: true  
+  direct: Human Rank Martial Study  
+  literal: Renjie Wuxue  
+- raw: 地阶武学  
+  result: Earth-Tier Martial Arts  
+  badtrans: true  
+  direct: Earth Rank Martial Study  
+  literal: Dijie Wuxue  
+- raw: 天阶武学  
+  result: Heaven-Tier Martial Arts  
+  badtrans: true  
+  direct: Heaven Rank Martial Study  
+  literal: Tianjie Wuxue  
