--- a/Files/Glossary.yaml
+++ b/Files/Glossary.yaml
@@ -2762,6 +2762,11 @@
   literal: Wang Zhanggui  
 
 # Names
+- raw: 阿吉  
+  result: A'Ji  
+  badtrans: true  
+  direct: Ah Ji  
+  literal: Aji  
 - raw: 丑丫
   result: Chou Ya
   badtrans: true
@@ -4702,6 +4707,11 @@
   literal: Li San wen  
 
 # Factions & Places
+- raw: 白马帮  
+  result: White Horse Gang  
+  badtrans: true  
+  direct: White Horse Help  
+  literal: Baima Bang  
 - raw: 怡香院
   result: Yixiang Courtyard
   badtrans: true
