--- a/Files/ManualTranslations.yaml
+++ b/Files/ManualTranslations.yaml
@@ -1,4 +1,14 @@
-﻿- raw: 咳咳，他，他们……他们去打酒了，你再给我们上一盘葫芦头、肉末烧茄子！  
+﻿- raw: 能将那王吾绳之以法不知是多少京城百姓之幸，如此善报也不知当如何报答阁下才好。  
+  result: Bringing Wang Wu to justice is a great fortune for the people of the capital; I don't know how to repay you for such kindness.
+  badtrans: true  
+  direct: Able to bring that Wang Ling to justice, not know how much capital people’s fortune, such good reward also not know how to repay you properly.  
+  literal: Neng jiang na Wang Wu sheng zhi yi fa bu zhi shi duoshao jingcheng baixing zhi xing, ruci shanbao ye bu zhi dang ruhe baoda gexia cai hao.  
+- raw: 报答就不必了，我行事只求问心无愧。  
+  result: No need to repay me, I just act with a clear conscience.  
+  badtrans: true  
+  direct: Repay not necessary, I act only seek heart no shame.  
+  literal: Baoda jiu bubi le, wo xingshi zhi qiu wenxin wukui.  
+- raw: 咳咳，他，他们……他们去打酒了，你再给我们上一盘葫芦头、肉末烧茄子！  
   result: "Ahem, they... they went to get some alcohol. Can you bring us another plate of hulu tou and minced meat braised eggplant?"
   badtrans: true  
   direct: Cough cough, he, they... they went to fight alcohol, you again give us serve one plate gourd head, minced meat braised eggplant!  
@@ -1190,6 +1200,16 @@
   result: "Yang\u00A0Ruoshui"
 
 # Names
+- raw: 王令  
+  result: Wang Ling  
+  badtrans: true  
+  direct: King Decree  
+  literal: Wang Ling  
+- raw: 恨千断  
+  result: Hen Qianduan  
+  badtrans: true  
+  direct: Hate Thousand Cut  
+  literal: Hen Qianduan  
 - raw: 闻宸阳  
   result: Wen Chenyang  
   badtrans: true  
