--- a/Files/Glossary.yaml
+++ b/Files/Glossary.yaml
@@ -1,4 +1,9 @@
 ﻿# Terms
+- raw: 空军  
+  result: Sky Warrior
+  badtrans: true  
+  direct: Sky Warrior  
+  literal: Kōng jūn 
 # - raw: 黑衣人  
 #   result: Black clothed person  
 #   allowalt: 
@@ -2763,6 +2768,26 @@
   literal: Wang Zhanggui  
 
 # Names
+- raw: 土根  
+  result: Tu Gen
+  badtrans: true  
+  direct: Earth Root  
+  literal: Tu Gen  
+- raw: 郑邀  
+  result: Zheng Yao  
+  badtrans: true  
+  direct: Zheng Invite  
+  literal: Zheng Yao  
+- raw: 观心   #Might be a problem
+  result: Guan Xin  
+  badtrans: false
+  direct: Observe Heart  
+  literal: Guan Xin  
+- raw: 慈云  
+  result: Ci Yun  
+  badtrans: true  
+  direct: Compassion Cloud  
+  literal: Ci Yun  
 - raw: 林嫂子  
   result: Sister Lin  
   badtrans: true  
@@ -3577,7 +3602,7 @@
   direct: Surpass Mountain
   literal: Ling Yue
 - raw: 小慈云
-  result: Xiao Ciyun
+  result: Xiao Ci Yun
   badtrans: true
   direct: Little Compassionate Cloud
   literal: Xiao Ci Yun
