--- a/Files/ManualTranslations.yaml
+++ b/Files/ManualTranslations.yaml
@@ -1,4 +1,35 @@
-﻿- raw: 能将那王吾绳之以法不知是多少京城百姓之幸，如此善报也不知当如何报答阁下才好。  
+﻿- raw: 葬军地观赏骷髅
+  result: Zang Jundi Guanshang Kuluo
+  badtrans: true
+  direct: Burial army land observe skeleton
+  literal: Zàng jūn dì guān shǎng kūlóu
+- raw: 宝藏图宝箱
+  result: Treasure Map Chest
+  badtrans: true
+  direct: Treasure map treasure chest
+  literal: Bǎo cáng tú bǎo xiāng
+- raw: 宝箱
+  result: Treasure Chest
+  badtrans: true
+  direct: Treasure box
+  literal: Bǎo xiāng
+- raw: 捭阖之覆
+  result: Baihe Reversal
+  badtrans: true
+  direct: Open close's reversal
+  literal: Bǎi hé zhī fù
+- raw: 捭阖众
+  result: Baihe Crowd
+  badtrans: true
+  direct: Open close masses
+  literal: Bǎi hé zhòng
+
+- raw: 手下留情！  
+  result: Show mercy!  
+  badtrans: true  
+  direct: Hand under leave mercy!  
+  literal: Shou xia liu qing!  
+- raw: 能将那王吾绳之以法不知是多少京城百姓之幸，如此善报也不知当如何报答阁下才好。  
   result: Bringing Wang Wu to justice is a great fortune for the people of the capital; I don't know how to repay you for such kindness.
   badtrans: true  
   direct: Able to bring that Wang Ling to justice, not know how much capital people’s fortune, such good reward also not know how to repay you properly.  
@@ -1200,6 +1231,21 @@
   result: "Yang\u00A0Ruoshui"
 
 # Names
+- raw: 鄀意  
+  result: Ruoyi  
+  badtrans: true  
+  direct: Hidden Intention  
+  literal: Ruò Yì  
+- raw: 盛河图  
+  result: Sheng Hetu  
+  badtrans: true  
+  direct: Prosperous River Diagram  
+  literal: Sheng He Tu  
+- raw: 戴河图  
+  result: Dai Hetu  
+  badtrans: true  
+  direct: Wear River Diagram  
+  literal: Dai He Tu  
 - raw: 王令  
   result: Wang Ling  
   badtrans: true  
