--- a/Files/Glossary.yaml
+++ b/Files/Glossary.yaml
@@ -1959,6 +1959,11 @@
   literal: Lingjun  
 
 # Items and Minerals
+- raw: 洛神醉  
+  result: Luo Shen Wine  
+  badtrans: true  
+  direct: Luo Shen Drunk  
+  literal: Luo Shen Zui  
 - raw: 碧霄剑
   result: Jade Sky Sword
   badtrans: true
@@ -2768,6 +2773,21 @@
   literal: Wang Zhanggui  
 
 # Names
+- raw: 聊融雪  
+  result: Liao Rongxue  
+  badtrans: true  
+  direct: Liao Rong Xue  
+  literal: Liao Rong Xue  
+- raw: 韩瑶姑娘  
+  result: Miss Han Yao  
+  badtrans: true  
+  direct: Han Yao young lady  
+  literal: Han Yao gu niang  
+- raw: 京涵瑶  
+  result: Jing Hanyao  
+  badtrans: true  
+  direct: Jing Han Yao  
+  literal: Jing Han Yao  
 - raw: 土根  
   result: Tu Gen
   badtrans: true  
