--- a/Files/ManualTranslations.yaml
+++ b/Files/ManualTranslations.yaml
@@ -1,4 +1,29 @@
-﻿- raw: 葬军地观赏骷髅
+﻿- raw: "酒味？"  
+  result: "Scent of alcohol?"  
+  badtrans: true  
+  direct: "Wine flavor?"  
+  literal: "Jiu wei?"  
+- raw: 交给我吧！  
+  result: Leave it to me!  
+  badtrans: true  
+  direct: Give to me!  
+  literal: Jiao gei wo ba!  
+- raw: 只要生活过得去……咳咳……着实气人！  
+  result: As long as life is manageable... Ahem... really frustrating!  
+  badtrans: true  
+  direct: As long as life passable... cough cough... really anger people!  
+  literal: Zhi yao sheng huo guo de qu... ke ke... zhe shi qi ren!  
+- raw: 还不是我家婆娘那事！  
+  result: It's still about my wife's matter! 
+  badtrans: true  
+  direct: Still not my wife that matter!  
+  literal: Hai bu shi wo jia po ni na shi!  
+- raw: 大名鼎鼎还称不上……  
+  result: Not exactly famous...  
+  badtrans: true  
+  direct: Big name still not call...  
+  literal: Da ming ding ding hai cheng bu shang...  
+- raw: 葬军地观赏骷髅
   result: Zang Jundi Guanshang Kuluo
   badtrans: true
   direct: Burial army land observe skeleton
@@ -23,7 +48,6 @@
   badtrans: true
   direct: Open close masses
   literal: Bǎi hé zhòng
-
 - raw: 手下留情！  
   result: Show mercy!  
   badtrans: true  
@@ -1231,8 +1255,53 @@
   result: "Yang\u00A0Ruoshui"
 
 # Names
+- raw: 奇斯年  
+  result: Qi Sinian  
+  badtrans: true  
+  direct: Qi Si Nian  
+  literal: Qi Si Nian  
+- raw: 业雅懿  
+  result: Ye Yayi  
+  badtrans: true  
+  direct: Ye Ya Yi  
+  literal: Ye Ya Yi  
+- raw: 问采  
+  result: Wen Cai  
+  badtrans: true  
+  direct: Wen Cai  
+  literal: Wen Cai  
+- raw: 力秋柳  
+  result: Li Qiuliu  
+  badtrans: true  
+  direct: Li Qiu Liu  
+  literal: Li Qiu Liu  
+- raw: 贵范  
+  result: Gui Fan  
+  badtrans: true  
+  direct: Gui Fan  
+  literal: Gui Fan  
+- raw: 掌夏柳  
+  result: Zhang Xialiu  
+  badtrans: true  
+  direct: Zhang Xia Liu  
+  literal: Zhang Xia Liu  
+- raw: 怀金枝  
+  result: Huai Jinzhi  
+  badtrans: true  
+  direct: Huai Jin Zhi  
+  literal: Huai Jin Zhi  
+- raw: 车香旋  
+  result: Che Xiangxuan  
+  badtrans: true  
+  direct: Che Xiang Xuan  
+  literal: Che Xiang Xuan  
+- raw: 阙承教  
+  result: Que Chengjiao  
+  badtrans: true  
+  direct: Que Cheng Jiao  
+  literal: Que Cheng Jiao  
 - raw: 鄀意  
-  result: Ruoyi  
+  result: Ruo Yi  
   badtrans: true  
   direct: Hidden Intention  
   literal: Ruò Yì  
