--- a/Files/Glossary.yaml
+++ b/Files/Glossary.yaml
@@ -1,4 +1,14 @@
 ﻿# Terms
+- raw: 交给我吧  
+  result: Leave it to me  
+  badtrans: true  
+  direct: Give to me  
+  literal: Jiao gei wo ba  
+- raw: 海色宝会  
+  result: Sea Treasure Gathering
+  badtrans: true  
+  direct: Sea Color Treasure Gathering  
+  literal: Hai Se Bao Hui  
 - raw: 空军  
   result: Sky Warrior
   badtrans: true  
@@ -2773,6 +2783,11 @@
   literal: Wang Zhanggui  
 
 # Names
+- raw: 翠莺  
+  result: Cui Ying  
+  badtrans: true  
+  direct: Jade Oriole  
+  literal: Cui Ying  
 - raw: 聊融雪  
   result: Liao Rongxue  
   badtrans: true  
