--- a/Files/ManualTranslations.yaml
+++ b/Files/ManualTranslations.yaml
@@ -1,4 +1,19 @@
-﻿- raw: "酒味？"  
+﻿- raw: "心思倒还挺细。那么你与我云潇山庄非亲非故，为何要帮我？"  
+  result: "You seem quite thoughtful. Then, you and my Cloudy Breeze Mountain Villa are not related by blood or by friendship, why would you want to help me?"  
+  badtrans: true  
+  direct: "Thoughts quite still fine. Then you with my Yunxiao Mountain Manor not close not distant, why want to help me?"  
+  literal: "Xin si dao hai ting xi. Na me ni yu wo Yun Xiao Shan Zhuang fei qin fei gu, wei he yao bang wo?"  
+- raw: 徐无名？哼，顾家的小子，怎得来趟南楚连自己的姓都不要了？  
+  result: Xu Wuming? Hmph, boy from the Gu family, why did you come to Southern Chu and even abandon your own surname?  
+  badtrans: true  
+  direct: Xu Wuming? Hmph, Gu family's boy, how come to Nan Chu even his own surname not want?  
+  literal: Xu Wu Ming? Hng, Gu jia de xiao zi, zen de lai tang Nan Chu lian zi ji de xing dou bu yao le?  
+- raw: 晚辈顾……徐无名，见过雪河夫人。  
+  result: Junior Gu... Xu Wuming, greets Lady Xuehe.  
+  badtrans: true  
+  direct: Junior Gu... Xu Wuming, has seen Madam Xuehe.  
+  literal: Wan bei Gu... Xu Wu Ming, jian guo Xue He fu ren.  
+- raw: "酒味？"  
   result: "Scent of alcohol?"  
   badtrans: true  
   direct: "Wine flavor?"  
