--- a/Files/Glossary.yaml
+++ b/Files/Glossary.yaml
@@ -1,7 +1,7 @@
 ﻿# Terms
 - raw: 交给我吧  
   result: Leave it to me  
-  badtrans: true  
+  badtrans: false
   direct: Give to me  
   literal: Jiao gei wo ba  
 - raw: 海色宝会  
@@ -2783,6 +2783,11 @@
   literal: Wang Zhanggui  
 
 # Names
+- raw: 司青寒  
+  result: Si Qinghan  
+  badtrans: true  
+  direct: Si Qing Han  
+  literal: Si Qing Han  
 - raw: 翠莺  
   result: Cui Ying  
   badtrans: true  
@@ -4533,9 +4538,6 @@
   badtrans: true
 - raw: 江玄隐
   result: Jiang Xuanyin
-  badtrans: true
-- raw: 司青寒
-  result: Sikong Qinghan 
   badtrans: true
 - raw: 空慧
   result: Kong Hui
