--- a/Files/Glossary.yaml
+++ b/Files/Glossary.yaml
@@ -2783,6 +2783,11 @@
   literal: Wang Zhanggui  
 
 # Names
+- raw: 青寒  
+  result: Qinghan  
+  badtrans: true  
+  direct: Blue Cold
+  literal: Qing Han  
 - raw: 司青寒  
   result: Si Qinghan  
   badtrans: true  
