heart demon, A'yi, Elixirs

--- a/Files/Glossary.yaml
+++ b/Files/Glossary.yaml
@@ -1,4 +1,14 @@
 ﻿# Terms
+- raw: 心魔  
+  result: Inner Demon  
+  badtrans: true  
+  direct: Heart Demon  
+  literal: Xinmo  
+- raw: 有苏花  
+  result: Yousu Flower  
+  badtrans: true  
+  direct: Yousu Flower  
+  literal: You Su Hua  
 - raw: 交给我吧  
   result: Leave it to me  
   badtrans: false
@@ -1969,6 +1979,16 @@
   literal: Lingjun  
 
 # Items and Minerals
+- raw: 生脉丹
+  result: Vital Pulse Pill
+  badtrans: true
+  direct: Life Pulse Pill
+  literal: Shengmai Dan
+- raw: 己寿配方
+  result: Longevity Formula
+  badtrans: true
+  direct: Self Longevity Formula
+  literal: Jishou Peifang
 - raw: 洛神醉  
   result: Luo Shen Wine  
   badtrans: true  
@@ -2783,6 +2803,12 @@
   literal: Wang Zhanggui  
 
 # Names
+
+- raw: 阿易  
+  result: A'Yi  
+  badtrans: true  
+  direct: A Yi  
+  literal: A Yi  
 - raw: 青寒  
   result: Qinghan  
   badtrans: true  
