--- a/Files/ManualTranslations.yaml
+++ b/Files/ManualTranslations.yaml
@@ -1,4 +1,134 @@
-﻿- raw: "心思倒还挺细。那么你与我云潇山庄非亲非故，为何要帮我？"  
+﻿- raw: 那你现在放人，我要带她走，婚事你去向张家退掉。  
+  result: Then release her now. I'm taking her with me. Call off the marriage with the Zhang family.  
+  badtrans: true  
+  direct: Then you now release person, I want take her leave, marriage you go to Zhang family cancel.  
+  literal: Then you now release person, I want take her leave, marriage you go to Zhang family cancel.  
+- raw: （眼睛一亮）这玉一看可价值不菲啊，姑娘真是出手阔绰。  
+  result: (Eyes light up) This jade looks quite valuable. Miss, you are truly generous.  
+  badtrans: true  
+  direct: (Eyes light up) This jade at a glance is worth not cheap, girl really spends lavishly.  
+  literal: (Eyes light up) This jade at a glance is worth not cheap, girl really spends lavishly.  
+- raw: 原来是这样。说来，晚辈还有一事恳求夫人相助。  
+  result: I see. Speaking of which, junior still has one more request for you, madam.  
+  badtrans: true  
+  direct: So it is like this. Speaking, junior still has one matter beg madam assist.  
+  literal: So it is like this. Speaking, junior still has one matter beg madam assist.  
+- raw: 那便有劳了。  
+  result: Then I'll trouble you
+  badtrans: true  
+  direct: That then have trouble.  
+  literal: That then have trouble.  
+- raw: 多谢几位照料了。  
+  result: Many thanks for all your care
+  badtrans: true  
+  direct: Many thanks several take care.  
+  literal: Many thanks several take care.  
+- raw: 有苏花是下策  
+  result: Yousu flower was a backup strategy  
+  badtrans: true  
+  direct: Have Su Hua is bad strategy  
+  literal: You Suhua is bad strategy  
+- raw: 我原本便是想来告知你们此事，没想到白大夫已经查明了。那蛊可是也找到化解之法了吗？  
+  result: I originally intended to inform you of this matter, but I didn't expect Doctor Bai to have already investigated it. Has a way to neutralize the Gu been found as well?
+  badtrans: true  
+  direct: I originally intended to inform you of this matter, but I didn't expect Doctor Bai to have already investigated it. Has a way to neutralize the Gu been found as well?  
+  literal: Wo yuanben bian shi xiang lai gaozhi nimen cishi, mei xiangdao Bai daifu yijing chaming le. Na Gu keshi ye zhaodao huajie zhi fa le ma?  
+- raw: 事实上，这次与蛊还不太一样。我曾在西南山野见过有苏花，所以知道它有使人陷入昏睡的作用。  
+  result: In fact, this time is not quite the same as Gu. I once saw Yousu flowers in the southwestern mountains and fields, so I know they have the effect of making people fall into a deep sleep.    
+  badtrans: true  
+  direct: In fact, this time is not quite the same as Gu. I once saw Yousu flowers in the southwestern mountains and fields, so I know they have the effect of making people fall into a deep sleep.  
+  literal: Shishishang, zhe ci yu Gu hai bu tai yiyang. Wo ceng zai xinan shanye jianguo Yousu hua, suoyi zhidao ta you shiren xianru hunshui de zuoyong.  
+- raw: "记得叫大伙销毁有苏花时小心些，一定要掩好口鼻。"  
+  result: "Remember to tell everyone to be careful when destroying Yousu Flowers, and make sure to cover your mouth and nose."  
+  badtrans: true  
+  direct: "Remember tell everyone destroy Yousu Flower time be careful, must cover good mouth nose."  
+  literal: "Ji de jiao da huo xiao hui You Su hua shi xiao xin xie, yi ding yao yan hao kou bi."  
+- raw: "咳咳……没什么功夫，逃跑倒是有一手。"  
+  result: "Cough... She doesn't have much kung fu, but escaping is something she's good at."  
+  badtrans: true  
+  direct: "Cough cough... No kung fu, running away indeed have a hand."  
+  literal: "Ke ke... Mei shen me gong fu, tao pao dao shi you yi shou."  
+- raw: 洛柔不知撒下了一把什么，使众人难以往前。  
+  result: "Luo Rou unknowingly scattered something, making it difficult for everyone to move forward."  
+  badtrans: true  
+  direct: "Luo Rou not know scattered down what, making crowd hard to move forward."  
+  literal: "Luo Rou bu zhi sa xia le yi ba shen me, shi zhong ren nan yi wang qian."  
+- raw: "怎么可能！中了大量有苏花粉竟然还能醒来？"  
+  result: "How is that possible! You were exposed to a large amount of Yousu pollen and still managed to wake up?"  
+  badtrans: true  
+  direct: "How possible! Hit by large amount of Yousu Flower powder, surprisingly still can wake up?"  
+  literal: "Zen me ke neng! Zhong le da liang You Su hua fen jing ran hai neng xing lai?"  
+- raw: "怎么可能！你中了大量有苏花粉竟然还能醒来？"  
+  result: "How is that possible! You were exposed to a large amount of Yousu pollen and still managed to wake up?"  
+  badtrans: true  
+  direct: "How possible! You hit by large amount of Yousu Flower powder, surprisingly still can wake up?"  
+  literal: "Zen me ke neng! Ni zhong le da liang You Su hua fen jing ran hai neng xing lai?"  
+- raw: "因我而死……？"  
+  result: "Die because of me...?"  
+  badtrans: true  
+  direct: "Because of me die...?"  
+  literal: "Yin wo er si...?"  
+- raw: "只要你不死，往后你身边的人都会因你而死。"  
+  result: "As long as you don't die, the people around you will die because of you."  
+  badtrans: true  
+  direct: "As long as you not die, in the future people around you all will die because of you."  
+  literal: "Zhi yao ni bu si, wang hou ni shen bian de ren dou hui yin ni er si."  
+- raw: "不光是你的朋友。今晚吹笛的人也是你吧？"  
+  result: "Not only your friend. The person playing the flute that night was you, right?"  
+  badtrans: true  
+  direct: "Not only your friend. Tonight blow flute person also you, right?"  
+  literal: "Bu guang shi ni de peng you. Jin wan chui di de ren ye shi ni ba?"  
+- raw: 喂……  
+  result: "Hey..."  
+  badtrans: true  
+  direct: "Feed..."  
+  literal: "Wei..."  
+- raw: "断不会认错。"  
+  result: "I am definitely sure"  
+  badtrans: true  
+  direct: "Definitely won't recognize wrong."  
+  literal: "Duan bu hui ren cuo."  
+- raw: "我对蛊毒一类研究并不多。但明日谷里的前辈来了，或许会有方法。现在我们只能强制控制住这些病人，避免再次暴动。"  
+  result: "I haven't studied Gu poison much. But when the elder from the valley arrives tomorrow, there might be a solution. For now, we can only forcibly restrain these patients to prevent another outbreak."  
+  badtrans: true  
+  direct: "I to Gu poison kind research not much. But tomorrow valley inside elder come, perhaps will have method. Now we only can forcibly control these patients, avoid again riot."  
+  literal: "Wo dui Gu du yi lei yan jiu bing bu duo. Dan ming ri gu li de qian bei lai le, huo xu hui you fang fa. Xian zai wo men zhi neng qiang zhi kong zhi zhu zhe xie bing ren, bi mian zai ci bao dong."  
+- raw: "蛊？"  
+  result: "Gu?"  
+  badtrans: true  
+  direct: "Gu?"  
+  literal: "Gu?"
+- raw: "（眉头紧皱）他们，他们应当是中了蛊……"  
+  result: "(Furrows brows) They... they must have been afflicted by Gu poison..."  
+  badtrans: true  
+  direct: "(Furrows brows) They, they should be hit by Gu..."  
+  literal: "(Mei tou jin zhou) Ta men, ta men ying dang shi zhong le Gu..."  
+- raw: "就是这里了！"  
+  result: "This is the place!"  
+  badtrans: true  
+  direct: "Exactly here!"  
+  literal: "Jiu shi zhe li le!"  
+- raw: "来了！"  
+  result: "Coming!"  
+  badtrans: true  
+  direct: "Arrived!"  
+  literal: "Lai le!"  
+- raw: "抱歉，来三间上房。"  
+  result: "Apologies, three upper rooms, please"  
+  badtrans: true  
+  direct: "Sorry, come three upper rooms."  
+  literal: "Bao qian, lai san jian shang fang."  
+- raw: "原是这样。"  
+  result: "So that's how it is"  
+  badtrans: true  
+  direct: "Originally is like this."  
+  literal: "Yuan shi zhe yang."  
+- raw: "有苏？花中绝色？有点意思。"  
+  result: "Yousu? A peerless beauty among flowers? Interesting."  
+  badtrans: true  
+  direct: "You Su? Among flowers absolute beauty? A bit interesting."  
+  literal: "You Su? Hua zhong jue se? You dian yi si."  
+- raw: "心思倒还挺细。那么你与我云潇山庄非亲非故，为何要帮我？"  
   result: "You seem quite thoughtful. Then, you and my Cloudy Breeze Mountain Villa are not related by blood or by friendship, why would you want to help me?"  
   badtrans: true  
   direct: "Thoughts quite still fine. Then you with my Yunxiao Mountain Manor not close not distant, why want to help me?"  
@@ -71,7 +201,7 @@
 - raw: 能将那王吾绳之以法不知是多少京城百姓之幸，如此善报也不知当如何报答阁下才好。  
   result: Bringing Wang Wu to justice is a great fortune for the people of the capital; I don't know how to repay you for such kindness.
   badtrans: true  
-  direct: Able to bring that Wang Ling to justice, not know how much capital people’s fortune, such good reward also not know how to repay you properly.  
+  direct: Able to bring that Wang Ling to justice, not know how much capital people's fortune, such good reward also not know how to repay you properly.  
   literal: Neng jiang na Wang Wu sheng zhi yi fa bu zhi shi duoshao jingcheng baixing zhi xing, ruci shanbao ye bu zhi dang ruhe baoda gexia cai hao.  
 - raw: 报答就不必了，我行事只求问心无愧。  
   result: No need to repay me, I just act with a clear conscience.  
@@ -2541,7 +2671,7 @@
 - raw: 绝世高手
   result: Peerless Expert
   badtrans: true
-  direct: World’s Greatest Master
+  direct: World's Greatest Master
   literal: Jue Shi Gao Shou
 - raw: 独步江湖
   result: Unrivaled in the Jianghu
