--- a/Files/Glossary.yaml
+++ b/Files/Glossary.yaml
@@ -1979,6 +1979,11 @@
   literal: Lingjun  
 
 # Items and Minerals
+- raw: 养气散配方  
+  result: Yangqi Powder Formula  
+  badtrans: true  
+  direct: Nourish Qi Powder Formula  
+  literal: Yangqi Powder Formula  
 - raw: 生脉丹
   result: Vital Pulse Pill
   badtrans: true
