Patch - without text dumper changes

--- a/Files/Glossary.yaml
+++ b/Files/Glossary.yaml
@@ -6723,3 +6723,15 @@
   badtrans: true
   direct: Nine Yang
   literal: Jiu Yang
+- raw: 一阳  
+  result: One Yang  
+  badtrans: true  
+  direct: One Yang  
+  literal: Yiyang  
+- raw: 六脉  
+  result: Six Meridians  
+  badtrans: true  
+  direct: Six Veins  
+  literal: Liu Mai  
+
+
