--- a/Files/ManualTranslations.yaml
+++ b/Files/ManualTranslations.yaml
@@ -1,4 +1,24 @@
-﻿- raw: 那你现在放人，我要带她走，婚事你去向张家退掉。  
+﻿- raw: 研习  
+  result: Study  
+  badtrans: true  
+  direct: Research and Study  
+  literal: Study  
+- raw: <color=#d65b5b>(未学会)</color>  
+  result: <color=#d65b5b>(Not Learned)</color>  
+  badtrans: true  
+- raw: <color=#868686>五脏</color>  
+  result: <color=#868686>Five Viscera</color>  
+  badtrans: true  
+- raw: <color=#a1a1a1>(未打通)</color>  
+  result: <color=#a1a1a1>(Blocked)</color>  
+  badtrans: true  
+- raw: <color=#868686>经脉</color>  
+  result: <color=#868686>Meridians</color>  
+  badtrans: true  
+- raw: 宗门大殿，一派之根本。又称云霄殿，昔日华美辉煌，今朝残破不堪。岁月如刀，刻剥着它昔日的光彩，如今只剩下尘封的废墟。<color=FFD700>大殿提供了宗门名声上限，也体现了宗门的整体等级。</color>  
+  result: The Sect Hall is the foundation of a sect. Also known as the Cloudsky Hall, it was once magnificent but now lies in ruins. Time carves away its former glory, leaving only a dust‑covered relic. <color=FFD700>The hall determines the sect's reputation cap and reflects its overall rank.</color> 
+  badtrans: true  
+- raw: 那你现在放人，我要带她走，婚事你去向张家退掉。  
   result: Then release her now. I'm taking her with me. Call off the marriage with the Zhang family.  
   badtrans: true  
   direct: Then you now release person, I want take her leave, marriage you go to Zhang family cancel.  
