--- a/Files/Glossary.yaml
+++ b/Files/Glossary.yaml
@@ -2808,7 +2808,61 @@
   literal: Wang Zhanggui  
 
 # Names
-
+- raw: 木行前辈  
+  result: Senior Mu Xing  
+  badtrans: true  
+  direct: Wood Walk Senior  
+  literal: Mu Xing Qianbei  
+- raw: 木行  
+  result: Mu Xing  
+  badtrans: true  
+  direct: Wood Walk  
+  literal: Mu Xing  
+- raw: 韦慈心  
+  result: Wei Cixin  
+  badtrans: true  
+  direct: Wei Compassionate Heart  
+  literal: Wei Ci Xin  
+- raw: 翁城铭  
+  result: Weng Chengming  
+  badtrans: true  
+  direct: Elder City Inscription  
+  literal: Weng Cheng Ming  
+- raw: 王驰鸿  
+  result: Wang Chihong  
+  badtrans: true  
+  direct: King Gallops to the Sky  
+  literal: Wang Chi Hong  
+- raw: 段泉  
+  result: Duan Quan  
+  badtrans: true  
+  direct: Section Spring  
+  literal: Duan Quan  
+- raw: 严峻  
+  result: Yan Jun  
+  badtrans: false  
+  direct: Strict Mountain  
+  literal: Yan Jun  
+- raw: 翁问玉  
+  result: Weng Wenyu  
+  badtrans: true  
+  direct: Elder Asks Yu  
+  literal: Weng Wen Yu  
+- raw: 厉放  
+  result: Li Fang  
+  badtrans: true  
+  direct: Severe Release  
+  literal: Li Fang  
+- raw: 闻常礼  
+  result: Wen Changli  
+  badtrans: true  
+  direct: Hear Constant Rites  
+  literal: Wen Changli  
+- raw: 闻常信  
+  result: Wen Changxin  
+  badtrans: true  
+  direct: Hear Constant Trust  
+  literal: Wen Changxin  
 - raw: 阿易  
   result: A'Yi  
   badtrans: true  
