--- a/Files/ManualTranslations.yaml
+++ b/Files/ManualTranslations.yaml
@@ -1,4 +1,29 @@
-﻿- raw: 研习  
+﻿- raw: 你也要找木行？  
+  result: Do you also want to find Mu Xing?  
+  badtrans: true  
+  direct: You Also Want to Find Wood Walk?  
+  literal: Ni Ye Yao Zhaomu Xing?  
+- raw: 替翁城铭报仇  
+  result: Report to Weng Chengming about revenge
+  badtrans: true  
+  direct: Replace Elder City Ming to Report Revenge  
+  literal: Ti Weng Cheng Ming Bao Chou  
+- raw: 那翁问玉究竟是如何身死！  
+  result: That elder asked how Weng Wenyu ultimately died!  
+  badtrans: true  
+  direct: That Elder Asked How Weng Wenyu Ultimately Was Dead!  
+  literal: Na Weng Wen Yu Jiujing Shi Ruo He Shen Si!  
+- raw: 读取  
+  result: Read  
+  badtrans: true  
+  direct: Read Fetch  
+  literal: Duqu  
+- raw: 嫡传-未加入  
+  result: Direct Inheritance ‑ Not Joined
+  badtrans: true  
+  direct: Direct Transmission - Not Joined  
+  literal: Dichuan - Wei Jiaru  
+- raw: 研习  
   result: Study  
   badtrans: true  
   direct: Research and Study  
