--- a/Files/Glossary.yaml
+++ b/Files/Glossary.yaml
@@ -1979,11 +1979,126 @@
   literal: Lingjun  
 
 # Items and Minerals
-- raw: 养气散配方  
-  result: Yangqi Powder Formula  
+- raw: 百变链刃
+  result: Shifting Chain Blade
+  badtrans: true
+  direct: Bai Bian Lian Ren
+  literal: Bai Bian Lian Ren
+- raw: 战骨寒
+  result: Battlebone Chill
+  badtrans: true
+  direct: Zhan Gu Han
+  literal: Zhan Gu Han
+- raw: 和玉酝
+  result: Harmonized Jade Brew
+  badtrans: true
+  direct: He Yu Yun
+  literal: He Yu Yun
+- raw: 肌苏丸
+  result: Skin Rejuvenation Pill
+  badtrans: true
+  direct: Ji Su Wan
+  literal: Ji Su Wan
+- raw: 鹤梦重续
+  result: Crane's Dream Reborn
+  badtrans: true
+  direct: He Meng Chong Xu
+  literal: He Meng Chong Xu
+- raw: 罗汉斋
+  result: Arhat's Retreat
+  badtrans: true
+  direct: Luo Han Zhai
+  literal: Luo Han Zhai
+- raw: 墨霜月
+  result: Ink Frost Moon
+  badtrans: true
+  direct: Mo Shuang Yue
+  literal: Mo Shuang Yue
+- raw: 凝竹丹
+  result: Bamboo Essence Pill
+  badtrans: true
+  direct: Ning Zhu Dan
+  literal: Ning Zhu Dan
+- raw: 白护缠  
+  result: White Guard Wrap 
   badtrans: true  
-  direct: Nourish Qi Powder Formula  
-  literal: Yangqi Powder Formula  
+  direct: White Protect Bind  
+  literal: Bai Hu Chan  
+- raw: 破障丹  
+  result: Obstruction Breaking Pill  
+  badtrans: true  
+  direct: Break Obstacle Pill  
+  literal: Po Zhang Dan  
+- raw: 菩提蛇胆丸  
+  result: Bodhi Snake Gall Pill  
+  badtrans: true  
+  direct: Bodhi Snake Gall Pill  
+  literal: Puti She Dan Wan  
+- raw: 龙窟动  
+  result: Dragon's Cave Stirs  
+  badtrans: true  
+  direct: Dragon Cave Stirs  
+  literal: Long Ku Dong  
+- raw: 瑶台秋  
+  result: Jade Terrace Autumn  
+  badtrans: true  
+  direct: Jade Platform Autumn  
+  literal: Yao Tai Qiu  
+- raw: 芋儿鸡  
+  result: Taro Chicken  
+  badtrans: true  
+  direct: Taro Child Chicken  
+  literal: Yu Er Ji  
+- raw: 雷火金丸  
+  result: Thunderfire Golden Pill  
+  badtrans: true  
+  direct: Thunder Fire Gold Pill  
+  literal: Lei Huo Jin Wan  
+- raw: 鸿米烧  
+  result: Hongmi Roast  
+  badtrans: true  
+  direct: Grand Rice Roast  
+  literal: Hong Mi Shao  
+- raw: 千仞凤  
+  result: Eminent Phoenix  
+  badtrans: true  
+  direct: Thousand Fathom Phoenix  
+  literal: Qian Ren Feng  
+- raw: 绿波香露  
+  result: Green Wave Fragrant Dew  
+  badtrans: true  
+  direct: Green Wave Scented Dew  
+  literal: Lv Bo Xiang Lu  
+- raw: 十陵风玄丹  
+  result: Ten Tombs Profound Wind Pill  
+  badtrans: true  
+  direct: Ten Tombs Wind Mysterious Pill  
+  literal: Shi Ling Feng Xuan Dan  
+- raw: 九环刀  
+  result: Nine Ring Blade  
+  badtrans: true  
+  direct: Nine Ring Knife  
+  literal: Jiu Huan Dao  
+- raw: 双金斗  
+  result: Double Golden Dagger  
+  badtrans: true  
+  direct: Double Gold Struggle  
+  literal: Shuang Jin Dou  
+- raw: 紫参清灵丹  
+  result: Purple Ginseng Clarity Pill  
+  badtrans: true  
+  direct: Purple Ginseng Clear Spirit Pill  
+  literal: Zishen Qingling Dan  
+- raw: 百解丹  
+  result: Hundred Remedies Pill  
+  badtrans: true  
+  direct: Hundred Solutions Pill  
+  literal: Baijie Dan  
+- raw: 养气散
+  result: Yangqi Powder   
+  badtrans: true  
+  direct: Nourish Qi Powder   
+  literal: Yangqi Powder   
 - raw: 生脉丹
   result: Vital Pulse Pill
   badtrans: true
@@ -2808,6 +2923,21 @@
   literal: Wang Zhanggui  
 
 # Names
+- raw: 白姑娘  
+  result: Miss Bai  
+  badtrans: true  
+  direct: White Young Lady  
+  literal: Bai Guniang  
+- raw: 白大夫  
+  result: Doctor Bai  
+  badtrans: true  
+  direct: White Doctor  
+  literal: Bai Dafu  
+- raw: 王黑  
+  result: Wang Hei  
+  badtrans: true  
+  direct: King Black  
+  literal: Wang Hei   
 - raw: 木行前辈  
   result: Senior Mu Xing  
   badtrans: true  
@@ -6787,5 +6917,8 @@
   badtrans: true  
   direct: Six Veins  
   literal: Liu Mai  
-
-
+- raw: 少泽
+  result: Shao Ze
+  badtrans: true
+  direct: Shao Ze
+  literal: Shao Ze
