--- a/Files/ManualTranslations.yaml
+++ b/Files/ManualTranslations.yaml
@@ -1,10 +1,22 @@
-﻿- raw: 你也要找木行？  
+﻿- raw: 一张泛旧的纸页，上面记载了碎铁
+  result: An old paper page that Sui Tie recorded on it
+- raw: 一张泛旧的纸页，上面记载了碎铁·雷火金丸配方
+  result: An old paper page that Sui Tie recorded on it · Thunderfire Golden Pill Formula
+  badtrans: true
+  direct: One sheet of old paper, on it recorded Broken Iron
+  literal: Yi zhang fan jiu de zhi ye, shangmian jizai le sui tie
+- raw: 白长老  
+  result: Elder Bai  
+  badtrans: true  
+  direct: White Elder  
+  literal: Bai Zhanglao 
+- raw: 你也要找木行？  
   result: Do you also want to find Mu Xing?  
   badtrans: true  
   direct: You Also Want to Find Wood Walk?  
   literal: Ni Ye Yao Zhaomu Xing?  
 - raw: 替翁城铭报仇  
-  result: Report to Weng Chengming about revenge
+  result: Replace Weng Chengming in his revenge
   badtrans: true  
   direct: Replace Elder City Ming to Report Revenge  
   literal: Ti Weng Cheng Ming Bao Chou  
